<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/money" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp">

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Ngày"
            android:inputType="date" />

        <ImageButton
            android:id="@+id/date_picker_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/schedule" />
    </LinearLayout>
    <EditText
        android:id="@+id/editTextExpenseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:hint="Nội dung" />
    <EditText
        android:id="@+id/editTextExpenseAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:hint="Số tiền"
        android:inputType="numberDecimal"
        />
    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:hint="Địa điểm"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        >
        <Spinner
            android:id="@+id/spinnerExpenseCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/expense_categories"
            android:layout_gravity="start|center"
            >
        </Spinner>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchExpensePaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Đã trả" />
    </FrameLayout>
    <Button
        android:id="@+id/buttonAddExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:text="Thêm" />
</LinearLayout>